src/test/deca/context/invalid/homemade/new_notclass.deca
// trying to initialize new on something which is not a class

{
    int a = new int();
}